@@ -1,3 +1,14 @@
+2016-12-13  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/plots/plots.py(scatter_density_plot_matrix):
+
+	- Allow alternate way of passing data to be plotted, i.e. as keyword
+	arguments.  This should be nicer in Python 3.6+ as keyword argument
+	order will be preserved.
+
+	- Add some examples to documentation, either with structured array or
+	with keyword arguments.
+
 2016-12-12  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/plots/plots.py(scatter_density_plot_matrix): 
